# lingyin-bot

./: .env  .env.dev  .env.prod  .gitignore  .gitmodules  README.md  bot.py  chatgpt_token.json  deploy.sh  poetry.toml  pyproject.toml  requirements.txt  start_bot.sh  test.py  virtual_env.sh
config/: chatgpt_api_key.yml  chatgpt_img_config.yml  chatgpt_token.yml
cqhttp/: config.yml
plugins/: echo.py
plugins/GPT3/: README.md  __init__.py  pyproject.toml
plugins/aidraw/: README.md  __init__.py
plugins/aidraw/nonebot_plugin_novelai/: __init__.py  aidraw.py
plugins/aidraw/nonebot_plugin_novelai/utils/: save.py
plugins/chatGPT/: README.md  __init__.py  pyproject.toml
plugins/chatGPT/nonebot_plugin_multi_chatgpt/: __init__.py  config.py  img_switcher.py  path.py
plugins/chatgpt-api/: __init__.py
plugins/chatgpt-api/server/: main.js  package.json
plugins/chatgpt/nonebot_plugin_multi_chatgpt/: path.py  utils.py
plugins/gpt3/: README.md  pyproject.toml
plugins/gpt3/nonebot_plugin_gpt3/: __init__.py  config.py  openai.py
plugins/nonebot_plugin_multi_chatgpt/: __init__.py
src/plugins/nonebot_plugin_multi_chatgpt/: __init__.py  config.py
src/plugins/openai/: __init__.py  config.py
