[tool.poetry]
name = "lingyin-bot"
version = "0.1.0"
description = ""
authors = ["chrisyy <1017975501@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0rc2"
nonebot-adapter-onebot = "^2.1.5"
nonebot-plugin-apscheduler = "^0.2.0"
poetry = "^1.3.0"

# chatgpt
revchatgpt = "0.0.43"
nonebot-plugin-htmlrender="^0.2.0.1"
pyyaml = "^6.0"


# image render

# novalai
pillow = "^9.3.0"

# gpt3
openai = "^0.25.0"
transformers = "^4.25.1"
aiohttp = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# nonebot配置
[tool.nonebot]
plugins = ["nonebot_plugin_apscheduler"]
plugin_dirs = ["plugins/"]
