[tool.poetry]
name = "nonebot-plugin-gpt3"
version = "0.1.0"
description = ""
authors = ["chrisyy <1017975501@qq.com>"]
readme = "README.md"
packages = [{include = "nonebot_plugin_gpt3"}]

[tool.poetry.dependencies]
nonebot2 = "^2.0.0rc2"
nonebot-adapter-onebot = "^2.1.5"

python = "^3.8"
openai = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
